# Static-Hand-Gesture-Recognition-Model

./: $training.csv  .gitignore  data_processing.py  hand_model.pkl  model.py  pyproject.toml  shell.nix  testing.csv  training.csv  training.py  validation.csv
